--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- GHOST -->
 <div id="ghost" class="ghost hidden">
-  <img src="images/ghost.jpg" alt="ghost">
+  <img src="ghost.jpg" alt="ghost">
   <p>wanna chk whts next?</p>
   
   <a href="journey1.html" class="yes-btn">YES</a>
@@ -43,3 +43,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
