--- a/birthday.html
+++ b/birthday.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="birthday">
-    <img src="./images/pic1.png" alt="birthday memory" class="bday-img">
+    <img src="pic1.png" alt="birthday memory" class="bday-img">
 
   <h1 class="pop">🎉 HAPPY BIRTHDAY HARSHAN 🎉</h1>
 
@@ -26,3 +26,4 @@
 
 </body>
 </html>
+
